// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel basic 1`] = `
.c9 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c9 g {
  fill: inherit;
  stroke: inherit;
}

.c9 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c9 *[stroke*="#"],
.c9 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c9 *[fill-rule],
.c9 *[FILL-RULE],
.c9 *[fill*="#"],
.c9 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c14 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #865CD6;
  stroke: #865CD6;
}

.c14 g {
  fill: inherit;
  stroke: inherit;
}

.c14 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c14 *[stroke*="#"],
.c14 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c14 *[fill-rule],
.c14 *[FILL-RULE],
.c14 *[fill*="#"],
.c14 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
  opacity: 1;
  -webkit-animation: gmgyXe 1s 0s forwards;
  animation: gmgyXe 1s 0s forwards;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  margin: 0;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin: 0;
  padding: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.c7 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c12 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  padding: 12px;
}

.c15 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c15:hover {
  background-color: rgba(221,221,221,0.5);
  color: #000000;
}

.c13 {
  display: inline-block;
}

.c13:first-child:not(:last-child) {
  margin-right: 12px;
}

.c13 > * {
  vertical-align: bottom;
}

.c1 {
  position: relative;
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c5 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c5 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c10 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c10 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c11 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c11 {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .c7 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c12 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .c15 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="c2"
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="c3"
      >
        <img
          className=""
          src="//v2.grommet.io/assets/IMG_4245.jpg"
        />
      </div>
    </div>
    <div
      className="c2"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        className="c4"
      >
        <img
          className=""
          src="//v2.grommet.io/assets/IMG_4210.jpg"
        />
      </div>
    </div>
    <div
      className="c5"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      tabIndex="0"
    >
      <div
        className="c6"
      >
        <button
          className="c7"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          type="button"
        >
          <div
            className="c8"
          >
            <svg
              aria-label="Previous"
              className="c9"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <button
            className="c12"
            disabled={false}
            icon={
              <Subtract
                color="brand"
              />
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c13"
            >
              <svg
                aria-label="Subtract"
                className="c14"
                color="brand"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
          <button
            className="c12"
            disabled={false}
            icon={<Subtract />}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c13"
            >
              <svg
                aria-label="Subtract"
                className="c9"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="c15"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          type="button"
        >
          <div
            className="c8"
          >
            <svg
              aria-label="Next"
              className="c9"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                strokeWidth="2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
    data-testid="test-carousel"
  >
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: relative;"
    >
      <div
        class="StyledBox-bStriS dFjuei"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4245.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <div
        class="StyledBox-bStriS fRWMzb"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4210.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS eBXrgH"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      tabindex="0"
    >
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK dtZehH"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-bStriS jxymSV"
      >
        <div
          class="StyledBox-bStriS lcWWay"
        >
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw FYCct"
                color="brand"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw htxeRg"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK eowzfL"
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 2`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
    data-testid="test-carousel"
  >
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <div
        class="StyledBox-bStriS fRWMzb"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4245.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: relative;"
    >
      <div
        class="StyledBox-bStriS jMrMHL"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4210.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS eBXrgH"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      tabindex="0"
    >
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK eowzfL"
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-bStriS jxymSV"
      >
        <div
          class="StyledBox-bStriS lcWWay"
        >
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw htxeRg"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw FYCct"
                color="brand"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK dtZehH"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel navigate 3`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
    data-testid="test-carousel"
  >
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: relative;"
    >
      <div
        class="StyledBox-bStriS eWdGeH"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4245.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <div
        class="StyledBox-bStriS fRWMzb"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4210.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS eBXrgH"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      tabindex="0"
    >
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK dtZehH"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-bStriS jxymSV"
      >
        <div
          class="StyledBox-bStriS lcWWay"
        >
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw FYCct"
                color="brand"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw htxeRg"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK eowzfL"
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
  >
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: relative;"
    >
      <div
        class="StyledBox-bStriS dFjuei"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4245.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <div
        class="StyledBox-bStriS fRWMzb"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4210.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS eBXrgH"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      tabindex="0"
    >
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK dtZehH"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-bStriS jxymSV"
      >
        <div
          class="StyledBox-bStriS lcWWay"
        >
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw FYCct"
                color="brand"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw htxeRg"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK eowzfL"
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel play 2`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
  >
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
    >
      <div
        class="StyledBox-bStriS fRWMzb"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4245.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS fTyZvg"
      style="position: relative;"
    >
      <div
        class="StyledBox-bStriS jMrMHL"
      >
        <img
          class="StyledImage-iWJlTu ealRJb"
          src="//v2.grommet.io/assets/IMG_4210.jpg"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS eBXrgH"
      style="position: absolute; overflow: hidden; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      tabindex="0"
    >
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK eowzfL"
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Previous"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-bStriS jxymSV"
      >
        <div
          class="StyledBox-bStriS lcWWay"
        >
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw htxeRg"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
          <button
            class="StyledButton-gXzblK kANibo"
            icon="[object Object]"
            type="button"
          >
            <span
              aria-hidden="true"
              class="StyledButton__StyledIcon-kzdZcp bhmqMt"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-gTfjEw FYCct"
                color="brand"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="StyledBox-bStriS jsbzAg"
      >
        <button
          class="StyledButton-gXzblK dtZehH"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-bStriS gWhpfl"
          >
            <svg
              aria-label="Next"
              class="StyledIcon-gTfjEw htxeRg"
              height="24px"
              role="img"
              version="1.1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <polyline
                fill="none"
                points="7 2 17 12 7 22"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
